fix: wrong padding

--- a/src/App.scss
+++ b/src/App.scss
@@ -121,9 +121,11 @@
     max-width: 432px;
   }
   .main-header-right {
-    padding-left: 33%;
+    padding-left: 38%;
   }
-
+  .main-header-left {
+    padding-left: 30px;
+  }
   .image-left {
     position: absolute;
     left: 0;
